--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="daa2b3">  <td>24/10/09 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:POM01.LoginTest@1e0b4072]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>24/10/09 10:38:08</td>   <td>21450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:0, instance:POM01.LoginTest@1e0b4072]">testLogin</td> 
+<tr bgcolor="daa2b3">  <td>25/03/29 10:46:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadData.getDataFromJSON()[pri:0, instance:ReadDataFromJSON.ReadData@6253c26]">getDataFromJSON</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>24/10/09 10:38:12</td>   <td>25054</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:POM01.LoginTest@1e0b4072]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
